[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "blnuhr"
description = "Python & Qt rendition of Berlin's quantity didactics clock"
readme = "README.md"
license = {text = "OPEN SOURCE LICENSE"}
authors = [
    {name = "Pete R. Jemian", email = "prjemian@gmail.com"},
]
keywords = ["Python", "Qt5", "clock"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment Status :: Console",
    "Environment Status :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: Free To Use But Restricted",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/prjemian/blnuhr/"

[project.gui-scripts]
blnuhr = "blnuhr:kopf"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blnuhr = ["resources/*", "LICENSE"]

[tool.setuptools_scm]
